mailsenderror/other/backup_operator_netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backup-operator-from-prometheus-ingress
  namespace: ecosystem
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: k8s-backup-operator
  ingress:
    - {}
  policyTypes:
    - Ingress
