mailsenderror/other/networkpolicy_deny_all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    meta.helm.sh/release-name: k8s-blueprint-operator
    meta.helm.sh/release-namespace: ecosystem
  creationTimestamp: "2026-07-01T13:22:50Z"
  generation: 1
  labels:
    app: ces
    app.kubernetes.io/instance: k8s-blueprint-operator
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: k8s-blueprint-operator
    app.kubernetes.io/version: 3.2.0
    helm.sh/chart: k8s-blueprint-operator-3.2.0
    k8s.cloudogu.com/component.name: k8s-blueprint-operator
    k8s.cloudogu.com/component.version: 3.2.0
  name: k8s-blueprint-operator-deny-all
  namespace: ecosystem
  resourceVersion: "1782912170657087000"
  uid: 38267fa2-2161-4400-a5b4-27d4cbafedce
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: k8s-blueprint-operator
      app.kubernetes.io/name: k8s-blueprint-operator
  policyTypes:
  - Ingress
